--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,141 @@
-.App {
-  text-align: center;
+:root {
+  --bg-color: #fdfdfa;
+  --fg-color: #202020;
+  --channel-hover-color: black;
+  --active-channel-color: var(--bg-color);
+  /* luminance 50%, so it works for light and dark theme */
+  --icon-hover-color: #148DEA;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+[data-theme="dark"] {
+  --bg-color: #202020;
+  --fg-color: #eff0f1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html {
+  /* prevents scrollbar appearance to shift layout, but always shows vertical scrollbar */
+  overflow-y: scroll;
+  /* hides inactive vertical scrollbar (transparent track) */
+  scrollbar-color: #7f7f7f transparent;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 1.2rem;
+  font-family: 'Atkinson Hyperlegible', 'IBM Plex Sans', 'Noto Sans', sans-serif;
+  min-width: 300px;
+  margin: 16px 8px 0px 16px;
+  background: var(--bg-color);
+  color: var(--fg-color);
+  fill: var(--fg-color);
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  background: var(--bg-color);
+  border: 0px solid transparent;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button:hover {
+  /* prevent outline on mouse click for chrome */
+  outline: 0 !important;
+}
+
+button:hover::-moz-focus-inner {
+  /* prevent outline on mouse click for ff */
+  border: 0;
+}
+
+.iconBtn {
+  padding: 0px 8px;
+}
+
+.iconBtn:hover:not([disabled])  {
+  fill: var(--icon-hover-color);
+}
+
+.iconBtn svg {
+  height: 20px;
+  vertical-align: middle;
+}
+
+a.iconBtn:visited {
+  fill: none;
+}
+
+.titleLineContainer {
+  display: flex;
+  align-items: center;
+}
+
+.title {
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin: 6px 10px 6px 0px;
+  user-select: none;
+  color: var(--active-channel-color);
+  filter: saturate(0.6)
+}
+
+#player {
+  display: block;
+  max-height: 30px;
+  margin-left: auto;
+  width: 300px;
+}
+
+.miscButtons {
+  display: flex;
+  margin-left: 4px;
+}
+
+#songInfo {
+  font-weight: 600;
+}
+
+#lyrics {
+  margin: 10px 0px;
+  line-height: 1.3;
+  font-size: 1.2rem;
+  display: flex;
+  flex-wrap: wrap;
+  white-space: pre-line;
+}
+
+#lyricsSourceLink {
+  font-size: 0.8rem;
+  color: var(--fg-color);
+  opacity: 0.3;
+  margin: 28px 0px;
+}
+
+a#spotifyLink[disabled] {
+  opacity: 0.66;
+}
+
+@media (max-width: 620px) {
+  .titleLineContainer {
+    display: grid;
   }
-  to {
-    transform: rotate(360deg);
+
+  .title {
+    grid-row: 1;
+    justify-self: flex-start;
+  }
+
+  .miscButtons {
+    grid-row: 1;
+    grid-column: 2;
+    margin-left: 0;
+    justify-self: flex-end;
+  }
+
+  #player {
+    grid-row: 2;
+    grid-column: 1/3;
+    margin-left: 0;
+    width: 100%;
   }
 }
