--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,3 @@
-@font-face {
-  font-family: 'B612';
-  src: local('B612 Regular'),
-      url('./fonts/b612-regular.woff2') format("woff2");
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: 'B612';
-  src: local('B612 Bold'),
-      url('./fonts/b612-bold.woff2') format("woff2");
-  font-weight: bold;
-}
-
 :root {
   --bg-color: #fdfdfa;
   --fg-color: #202020;
@@ -37,8 +23,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 1.15rem;
-  font-family: 'B612', 'Atkinson Hyperlegible', 'IBM Plex Sans', 'Noto Sans', sans-serif;
+  font-size: 1.2rem;
+  font-family: 'Atkinson Hyperlegible', 'IBM Plex Sans', 'Noto Sans', sans-serif;
   min-width: 300px;
   margin: 16px 8px 0px 16px;
   background: var(--bg-color);
@@ -86,14 +72,12 @@ a.iconBtn:visited {
 }
 
 .title {
-  font-size: 1.3rem;
-  font-weight: bold;
+  font-size: 1.4rem;
+  font-weight: 600;
   margin: 6px 10px 6px 0px;
   user-select: none;
   color: var(--active-channel-color);
-  letter-spacing: 0.04rem;
-  word-spacing: -0.1rem;
-  filter: saturate(0.6);
+  filter: saturate(0.6)
 }
 
 #player {
@@ -115,6 +99,7 @@ a.iconBtn:visited {
 #lyrics {
   margin: 10px 0px;
   line-height: 1.25;
+  font-size: 1.2rem;
   display: flex;
   flex-wrap: wrap;
   white-space: pre-line;
