--- a/src/Channels.css
+++ b/src/Channels.css
@@ -61,6 +61,6 @@
     @media screen and (max-width: 500px) {
       #channels {
         display: grid;
-        grid-template-columns: min-content min-content min-content;
+        grid-template-columns: 1fr 1fr 1fr;
       }
     }
