box-sizing border-box

--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,17 @@
   --fg-color: #eff0f1;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
   /* prevents scrollbar appearance to shift layout, but always shows vertical scrollbar */
   overflow-y: scroll;
   /* hides inactive vertical scrollbar (transparent track) */
   scrollbar-color: #7f7f7f transparent;
-  box-sizing: border-box;
 }
 
 #root {
